[package]
name = "git-remote-inv4"
version = "0.1.0"
edition = "2021"

[dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate" }
sc-keystore = { git = "https://github.com/paritytech/substrate" }
ipfs-api = "0.16.0"
cid = "0.8.6"
hex = "0.4.3"
futures = "0.3.24"
temp-dir = "0.1.11"
git2 = "0.15.0"
log = "0.4.17"
dirs = "4.0.0"
serde = "1.0.144"
toml = "0.5.9"
twox-hash = "1.6.3"
magic-crypt = "3.1.10"
async-std = "1.12.0"
interprocess = "1.1.1"

[dependencies.tokio]
version = "1.20.1"
features = ["macros", "rt-multi-thread", "process", "io-std"]

[dependencies.subxt]
git = "https://github.com/paritytech/subxt"
rev = "599107b4322d2b959e26d9cf5269bc1ed4375a8c"

[dependencies.codec]
package = "parity-scale-codec"
version = "3.1.5"
default-features = false
features = ["derive", "full", "bit-vec"]
